--- a/static/vant/icon/index.wxml
+++ b/static/vant/icon/index.wxml
@@ -6,7 +6,7 @@
   bind:tap="onClick"
 >
   <van-info
-    wx:if="{{ info !== null || dot }}"
+    wx:if="{{ (info !== null&& info !==0) || dot }}"
     dot="{{ dot }}"
     info="{{ info }}"
     custom-class="van-icon__info"
